kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $CLUSTER_NAMESPACE
  labels:
    app: $CLUSTER_NAMESPACE
